--- a/site/contrib/analysis/algorithm/368-Linear Algorithm.html
+++ b/site/contrib/analysis/algorithm/368-Linear Algorithm.html
@@ -2,12 +2,9 @@
 
 <p>This command is used to construct a Linear algorithm object which
 takes one iteration to solve the system of equations.</p>
-<dl>
-<dt></dt>
-<dd>
-&lt;math&gt; \Delta U = - K^{-1}R(U),\!&lt;/math&gt;
-</dd>
-</dl>
+
+\[ \Delta U = - K^{-1}R(U),\!\]
+
 
 ```tcl
 algorithm Linear &lt;-initial&gt;
