--- a/site/contrib/analysis/algorithm/398-Modified Newton Algorithm.html
+++ b/site/contrib/analysis/algorithm/398-Modified Newton Algorithm.html
@@ -31,25 +31,16 @@ iterations, instead of the current tangent. The Modified Newmark method
 is thus an iterative method in which, starting at a good initial guess
 $U_0$ we keep iterating until &lt;math&gt;\Delta
 U&lt;/math&gt; is small enough using the following:</p>
-<dl>
-<dt></dt>
-<dd>
-&lt;math&gt; \Delta U = - K_0^{-1}R(U_n),\!&lt;/math&gt;
-</dd>
-</dl>
-<dl>
-<dt></dt>
-<dd>
-&lt;math&gt; U_{n+1} = U_n + \Delta U\,\!&lt;/math&gt;
-</dd>
-</dl>
+
+\[ \Delta U = - K_0^{-1}R(U_n),\!\]
+
+
+\[ U_{n+1} = U_n + \Delta U\,\!\]
+
 <p>where:</p>
-<dl>
-<dt></dt>
-<dd>
-&lt;math&gt;K_0 = \frac{\partial R(U_0)}{\partial U}\,\!&lt;/math&gt;
-</dd>
-</dl>
+
+\[K_0 = \frac{\partial R(U_0)}{\partial U}\,\!\]
+
 <p>The advantage of this method over the regular Newton method, is that
 the system Jacobian is formed only once at the start of the step and
 factored only once if a direct solver is used. The drawback of this
