--- a/site/contrib/analysis/integrator/387-Minimum Unbalanced Displacement Norm/index.html
+++ b/site/contrib/analysis/integrator/387-Minimum Unbalanced Displacement Norm/index.html
@@ -13283,7 +13283,7 @@ integrator MinUnbalDispNorm 0.1;
 <hr />
 <h2 id="theory">Theory</h2>
 <p>
-The load increment at iteration i, &lt;math&gt;d_{1,i}&lt;/math&gt;, is related to the load increment at (i-1), <span class="math inline">\(d\lambda_{1,i-1}\)</span>, and the number of iterations at (i-1), <span class="math inline">\(J_{i-1}\)</span>, by the following:
+The load increment at iteration i, <span class="math inline">\(d\lambda_{1,i}\)</span> , is related to the load increment at (i-1), <span class="math inline">\(d\lambda_{1,i-1}\)</span>, and the number of iterations at (i-1), <span class="math inline">\(J_{i-1}\)</span>, by the following:
 </p>
 <dl>
 <dt>
