--- a/site/libraries/modeling/uniaxial/index.html
+++ b/site/libraries/modeling/uniaxial/index.html
@@ -14267,18 +14267,8 @@ Concrete Material With Stuff in the Cracks
 Complete Concrete Model by Chang and Mander (1994)
 </dd>
 </dl>
-<h3 id="other-uniaxial-materials">Other Uniaxial Materials</h3>
+<h3 id="moment-curvature-inspired-materials">Moment-Curvature inspired materials</h3>
 <ul>
-<li>
-<a href="CastFuse_Material">CastFuse </a>
-</li>
-<li>
-<a href="ViscousDamper_Material">ViscousDamper </a>
-</li>
-<li>
-<a href="BilinearOilDamper_Material"
->BilinearOilDamper</a>
-</li>
 <li>
 <a
 href="ModIMKBilin/">ModIMKBilin</a> Modified Ibarra-Medina-Krawinkler Deterioration Model with Bilinear Hysteretic Response (Bilin)
@@ -14290,6 +14280,24 @@ href="ModIMKPeakOriented/">ModIMKPeakOriented</a> Modified Ibarra-Medina-Krawink
 </li>
 <li>
 <a href="ModIMKPinching">ModIMKPinching</a> Modified Ibarra-Medina-Krawinkler Deterioration Model with Pinched Hysteretic Response
+</li>
+<li>
+<a href="BoucWen_Material">BoucWen</a>
+</li>
+<li>
+<a href="BWBN_Material">BWBN</a> Pinching Hysteretic Bouc-Wen Material
+</li>
+</ul>
+<h3 id="other-uniaxial-materials">Other Uniaxial Materials</h3>
+<li>
+<a href="CastFuse_Material">CastFuse </a>
+</li>
+<li>
+<a href="ViscousDamper_Material">ViscousDamper </a>
+</li>
+<li>
+<a href="BilinearOilDamper_Material"
+>BilinearOilDamper</a>
 </li>
 <li>
 <a href="SAWS_Material">SAWS</a>
@@ -14349,12 +14357,6 @@ href="ModIMKPeakOriented/">ModIMKPeakOriented</a> Modified Ibarra-Medina-Krawink
 <a href="Viscous_Material">Viscous</a>
 </li>
 <li>
-<a href="BoucWen_Material">BoucWen</a>
-</li>
-<li>
-<a href="BWBN_Material">BWBN</a>Pinching Hysteretic Bouc-Wen Material
-</li>
-<li>
 <a href="KikuchiAikenHDR_Material">KikuchiAikenHDR</a>
 </li>
 <li>
@@ -14376,7 +14378,7 @@ href="ModIMKPeakOriented/">ModIMKPeakOriented</a> Modified Ibarra-Medina-Krawink
 <a href="CFSSSWP"> CFSSSWP Steel-Sheathed Cold-formed Steel Shear Wall Panel</a>
 </li>
 </ul>
-<h3 id="pytzqz-uniaxial-materials">PyTzQz uniaxial materials</h3>
+<h3 id="pytzqz-uniaxial-soil-materials">PyTzQz uniaxial soil materials</h3>
 for p-y, t-z and q-z elements for modeling soil-structure interaction through the piles in a structural foundation
 <ul>
 <li>
