--- a/site/contrib/modeling/uniaxialMaterial/489-Parallel/index.html
+++ b/site/contrib/modeling/uniaxialMaterial/489-Parallel/index.html
@@ -14143,8 +14143,18 @@ integer tag identifying material
 </tr>
 <tr class="even">
 <td>
+<code>tag1 tag2 …</code>
+</td>
+<td>
 <p>
-<strong>$tag1 <span class="math inline">\(tag2 ...&lt;/strong&gt;&lt;/p&gt;&lt;/td&gt; &lt;td&gt;&lt;p&gt;identification tags of materials making up the material model&lt;/p&gt;&lt;/td&gt; &lt;/tr&gt; &lt;tr class=&quot;odd&quot;&gt; &lt;td&gt;&lt;p&gt;&lt;strong&gt;\)</span>fact1 $fact2 …</strong>
+identification tags of materials making up the material model
+</p>
+</td>
+</tr>
+<tr class="odd">
+<td>
+<p>
+<code>fact1 fact2 …</code>
 </p>
 </td>
 <td>
@@ -14155,11 +14165,10 @@ factors to create a linear combination of the specified materials. Factors can b
 </tr>
 </tbody>
 </table>
-<p>
-The parallel material is represented graphically: <img
-src="ParallelMaterial.gif" title="ParallelMaterial.gif"
-alt="ParallelMaterial.gif" />
-</p>
+<p>The parallel material is represented graphically:</p>
+<p><img
+src="/OpenSeesRT/contrib/static/ParallelMaterial.gif" title="ParallelMaterial.gif"
+alt="ParallelMaterial.gif" /></p>
 <p>
 In a parallel model, strains are equal and stresses and stiffnesses are additive: <img src="/OpenSeesRT/contrib/static/ParallelMaterialExample.gif"
 title="ParallelMaterialExample.gif"
