--- a/site/libraries/modeling/uniaxial/index.html
+++ b/site/libraries/modeling/uniaxial/index.html
@@ -14288,6 +14288,12 @@ href="ModIMKPeakOriented/">ModIMKPeakOriented</a> Modified Ibarra-Medina-Krawink
 <a href="BWBN_Material">BWBN</a> Pinching Hysteretic Bouc-Wen Material
 </li>
 </ul>
+<h3 id="brace-materials">Brace Materials</h3>
+<ul>
+<li>
+<a href="SelfCentering_Material">SelfCentering</a> uniaxial self-centering (flag-shaped) material object with optional non-recoverable slip behaviour and an optional stiffness increase at high strains (bearing behaviour).
+</li>
+</ul>
 <h3 id="other-uniaxial-materials">Other Uniaxial Materials</h3>
 <li>
 <a href="CastFuse_Material">CastFuse </a>
@@ -14349,9 +14355,6 @@ href="ModIMKPeakOriented/">ModIMKPeakOriented</a> Modified Ibarra-Medina-Krawink
 </li>
 <li>
 <a href="Engineered_Cementitious_Composites_Material">Engineered Cementitious Composites</a>
-</li>
-<li>
-<a href="SelfCentering_Material">SelfCentering</a>
 </li>
 <li>
 <a href="Viscous_Material">Viscous</a>
