--- a/site/libraries/modeling/uniaxial/index.html
+++ b/site/libraries/modeling/uniaxial/index.html
@@ -14341,6 +14341,15 @@ BoucWenInfill
 <a href="BWBN_Material">BWBN</a> Pinching Hysteretic Bouc-Wen Material
 </li>
 </ul>
+<h3 id="wrappers">Wrappers</h3>
+<ul>
+<li>
+<a href="Fatigue_Material">Fatigue</a>
+</li>
+<li>
+<a href="MinMax_Material">MinMax</a>
+</li>
+</ul>
 <h3 id="other-uniaxial-materials">Other Uniaxial Materials</h3>
 <ul>
 <li>
@@ -14371,9 +14380,6 @@ href="ModIMKPeakOriented/">ModIMKPeakOriented</a> Modified Ibarra-Medina-Krawink
 <a href="Bond_SP01">Bond_SP01</a> Strain Penetration Model for Fully Anchored Steel Reinforcing Bars
 </li>
 <li>
-<a href="Fatigue_Material">Fatigue</a>
-</li>
-<li>
 <a href="Impact_Material">Impact</a>
 </li>
 <li>
@@ -14381,9 +14387,6 @@ href="ModIMKPeakOriented/">ModIMKPeakOriented</a> Modified Ibarra-Medina-Krawink
 </li>
 <li>
 <a href="Limit_State_Material">Limit State</a>
-</li>
-<li>
-<a href="MinMax_Material">MinMax</a>
 </li>
 <li>
 <a href="MultiLinear_Material">MultiLinear</a>
